--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,10 +5,30 @@
             "label": "compilar",
             "type": "shell",
             "command": "gcc -c ${file} -o ${fileDirname}/${fileBasenameNoExtension}.o",
+            "group": "build"
+        },
+        {
+            "type": "cppbuild",
+            "label": "C/C++: gcc arquivo de build ativo",
+            "command": "/usr/bin/gcc",
+            "args": [
+                "-fdiagnostics-color=always",
+                "-g",
+                "${file}",
+                "-o",
+                "${fileDirname}/${fileBasenameNoExtension}"
+            ],
+            "options": {
+                "cwd": "${fileDirname}"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
             "group": {
                 "kind": "build",
                 "isDefault": true
-            }
+            },
+            "detail": "Tarefa gerada pelo Depurador."
         }
     ]
 }
